fix print error graphical issue
the pokédex was loading the names for the list when they list wasn't even being displayed, that should now be fixed

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,16 @@ $RECYCLE.BIN/
 Event Assembler
 ups
 
+#files you are expected to build
+graphics/*.bin
+compressed/*.bin
+compressed/*.bin.dmp
+dialogue.event
+fontGraphics.event
+fontWidth.event
+names.event
+system.event
+
 # =========================
 # Operating System Files
 # =========================
